изменён if на switch